// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/components/CommonFeature.jsx Snapshot tests with react-test-renderer CommonFeature is rendered correctly with all truthy props 1`] = `
<div>
  <div
    className="CommonFeature CommonFeature--smaller CommonFeature--condensed CommonFeature--active not-clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--anti-track g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_anti_tracking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--smaller CommonFeature--condensed CommonFeature--active not-clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--ad-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_ad_blocking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--smaller CommonFeature--condensed CommonFeature--active not-clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--smart-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      smart_blocking
    </div>
  </div>
</div>
`;

exports[`app/panel/components/CommonFeature.jsx Snapshot tests with react-test-renderer CommonFeature is rendered correctly with falsy props 1`] = `
<div>
  <div
    className="CommonFeature CommonFeature--normal CommonFeature--inactive clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      off
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--anti-track g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_anti_tracking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--normal CommonFeature--inactive clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      off
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--ad-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_ad_blocking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--normal CommonFeature--inactive clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      off
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--smart-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      smart_blocking
    </div>
  </div>
</div>
`;

exports[`app/panel/components/CommonFeature.jsx Snapshot tests with react-test-renderer CommonFeature is rendered correctly with some truthy props 1`] = `
<div>
  <div
    className="CommonFeature CommonFeature--normal CommonFeature--active clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--anti-track g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_anti_tracking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--normal CommonFeature--active not-clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--ad-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      enhanced_ad_blocking
    </div>
  </div>
  <div
    className="CommonFeature CommonFeature--condensed CommonFeature--active not-clickable"
    onClick={[Function]}
  >
    <div
      className="CommonFeature__status"
    >
      on
    </div>
    <div
      className="CommonFeature__icon CommonFeature__icon--smart-block g-tooltip"
    />
    <div
      className="CommonFeature__feature-name"
    >
      smart_blocking
    </div>
  </div>
</div>
`;
